# kairos-agent-infra

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  PROGRESS.md  README.md  deny.toml  pyproject.toml  rust-toolchain.toml
.agents/skills/git-merge-to-main/: SKILL.md
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/: AGENTS.md
crates/assembly/: Cargo.toml
crates/assembly/src/: lib.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: config.rs  errors.rs  factory.rs  lib.rs  logging.rs  tenancy.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs  policy.rs  types.rs
crates/harness/src/context/: assembly.rs  digest.rs  history.rs  mod.rs  partition.rs  retrievers.rs  token_counter.rs
crates/harness/src/event/: emitter.rs  mod.rs  sanitizer.rs
crates/harness/src/loop_engine/: budget.rs  engine.rs  mod.rs  run_context.rs  state.rs  step_builder.rs  stream_consumer.rs
crates/harness/src/orchestration/: approval.rs  mod.rs  permission.rs
crates/harness/src/session/: mod.rs  store.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/memory/src/contracts/: embedding.rs  mod.rs  rerank.rs  tokenizer.rs  vector_store.rs
crates/model_gateway/: Cargo.toml
crates/model_gateway/src/: config.rs  factory.rs  lib.rs  router.rs
crates/model_gateway/src/contracts/: chat.rs  mod.rs  router.rs
crates/model_gateway/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  step.rs
crates/observability/src/contracts/: mod.rs  query.rs  sink.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: events.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/src/contracts/: executor.rs  mod.rs  registry.rs  spec.rs
docs/: AGENTS.md  README.md
docs/adr/: 0001-vector-store-lancedb.md  0002-hybrid-fusion-rrf.md  0003-abstractions-in-module.md  0004-no-knowledge-graph-mvp.md  0005-decay-ranking-conflict-deletion.md  0006-memory-classification-by-cognitive-function.md  0007-memory-mechanism-vs-policy-timing.md  0008-procedural-evaluation-decoupling.md  0009-single-multi-user-scoping-isolation.md  0010-auth-api-key-per-tenant.md  0011-model-contract-ownership.md  0012-tenant-context-explicit-passing.md  0013-lancedb-tenant-physical-tables.md  0014-six-layer-naming-import-linter.md  0015-vector-store-uplift-foundation.md  0016-subagent-as-tool-call.md  0017-scope-metadata-inference.md  0018-config-file-format-toml.md  0019-language-migration-python-to-rust-ts.md  0020-cpu-offload-strategy.md  0021-rust-runtime-ts-ui-architecture.md  0022-deployment-topology-cell-per-tenant.md  0023-user-level-authentication.md  0024-memory-data-versioning-and-compliance-lifecycle.md  README.md
docs/assembly/: profile.md  skills.md
docs/foundation/: foundation.md
docs/harness/: context.md  distill.md  loop.md  session-hitl.md  subagent.md
docs/modules/: eval.md  knowledge.md  model-gateway.md  model_gateway.md  observability.md  tools.md
docs/modules/benchmark/: README.md  dataset.md  protocol.md
docs/modules/memory/: README.md  api.md  everos-analysis.md  memory-types.md  retrieval.md  tradeoffs.md
docs/project/: architecture.md  overview.md  retrospective.md  roadmap.md
docs/protocol/: agent-events.md
docs/verticals/: education.md
src/kairos/: __init__.py
src/kairos/adapter/: __init__.py
src/kairos/assembly/: __init__.py
src/kairos/cli/: __init__.py
src/kairos/foundation/: __init__.py  config.py  errors.py  factory.py  logging.py  tenancy.py
src/kairos/harness/: __init__.py
src/kairos/modules/: __init__.py
src/kairos/modules/memory/: __init__.py
src/kairos/modules/memory/contracts/: __init__.py  embedding.py  rerank.py  tokenizer.py  vector_store.py
src/kairos/server/: __init__.py
tests/contracts/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_foundation.py  test_skeleton_smoke.py
tools/: check_doc_links.py
xtask/: Cargo.toml
xtask/src/: check_docs.rs  doc_sync.rs  install_hooks.rs  main.rs
