# Kairos Agent Infra —— Rust workspace 根(ADR 0019/0021)
#
# 六层架构落为各自的 crate,依赖方向由 crate 依赖图在编译期物理强制
# (下层不声明上层,上层符号即不可见)。共享依赖版本在 [workspace.dependencies]
# 统一锁定,各 crate 用 `foo = { workspace = true }` 引用,避免版本漂移。

[workspace]
resolver = "2"
members = [
    "crates/foundation",
    "crates/model_gateway",
    "crates/memory",
    "crates/tools",
    "crates/observability",
    "crates/harness",
    "crates/assembly",
    "crates/server",
    "crates/protocol",
    "apps/cli",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# MSRV 对齐 rust-toolchain.toml 的 pin(自托管服务,无外部消费者,不承诺更低 MSRV;
# 升级工具链时两处同步)。
rust-version = "1.96"
license = "MIT"

# 共享依赖:锁定精确版本(安全约定:不用开放区间)。各 crate 按需 workspace = true 引用。
[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
toml = "=1.1.2"
thiserror = "=2.0.11"
tokio = { version = "=1.43.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "=0.1.86"
eventsource-stream = "=0.2.3"
futures-util = "=0.3.33"
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls", "json", "stream"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["json", "env-filter"] }
# 0.6.5 要求 tokio ^1.47.1,与 workspace 精确锁定的 tokio =1.43.0 冲突;
# 0.6.4 仅需 ^1.5.0。wiremock 为 dev-only 测试依赖,降 patch 而非动全 workspace 运行时 tokio。
wiremock = "=0.6.4"
# 0.7.18 要求 tokio ^1.44.0,与 workspace 精确锁定的 tokio =1.43.0 冲突;
# 0.7.14 仅需 ^1.0.0。降 patch 而非动全 workspace 运行时 tokio(同 wiremock 策略)。
tokio-util = "=0.7.14"
chrono = { version = "=0.4.45", features = ["serde"] }
uuid = { version = "=1.24.0", features = ["v4"] }
tiktoken-rs = "=0.12.0"
# schemars 已移除(M8):全仓零消费者,protocol 未 derive JsonSchema,CI 无 schema 导出。
# 待 JSON Schema 导出真正落地时再引入。

# 发布档:Runtime 主部署目标为机构云(ADR 0019 追记 / ADR 0022 cell-per-tenant)。
# panic = "unwind":单次 panic 由 tokio 在 task 边界捕获,不打穿服务多用户的整个 cell
#   (panic = "abort" 会让任一请求的 panic 终止整个进程,连带同 cell 全部用户)。
# opt-level = 3:服务器取吞吐;本地小体积档(opt-level = "z" 等)待有本地分发需求时另加(YAGNI)。
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"
