[project]
name = "kairos-agent-infra"
version = "0.1.0"
description = "解耦的 Agent 基础设施:六层架构,模块独立演进、可插拔"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # 仅声明当前阶段确需的依赖;embedding/rerank 等重依赖等实现对应任务时再按需加(YAGNI)
    "lancedb>=0.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# 本地 embedding/rerank 模型相关依赖,等实现 sentence_transformer / cross_encoder provider 时启用
# local-models = ["sentence-transformers>=3.0"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

# ---------------------------------------------------------------------------
# Ruff:格式化 + lint
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",          # pyflakes
    "I",          # isort(import 排序)
    "UP",         # pyupgrade
    "B",          # flake8-bugbear
    "ASYNC",      # flake8-async
    "RUF",        # ruff 专有规则
]

# ---------------------------------------------------------------------------
# Mypy:类型检查。foundation 与各模块的 contracts 要求严格
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# lancedb 等三方库暂无完整类型存根,忽略其缺失
module = ["lancedb.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + 覆盖率
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["src/kairos"]
branch = true

[tool.coverage.report]
# 核心模块覆盖率门槛见 AGENTS.md(>=80%);此处为全局兜底,CI 中对核心模块单独把关
show_missing = true

# ---------------------------------------------------------------------------
# Import Linter:把架构纪律(六层依赖方向)写成可检查的契约(ADR 0014)
# 规则依据 docs/project/architecture.md 与 docs/foundation/foundation.md
#
# 注:契约的 modules 必须是已存在的包,否则 lint-imports 报错。
# 按 "grow by task" 原则:包被创建时,同步激活/扩充对应契约。
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "kairos"

# 契约一:六层严格分层,依赖单向向下(下层不知上层)
[[tool.importlinter.contracts]]
name = "六层分层依赖单向"
type = "layers"
layers = [
    "kairos.cli",
    "kairos.server",
    "kairos.assembly",
    "kairos.harness",
    "kairos.modules",
    "kairos.foundation",
]

# 契约二:L1 模块间零依赖(随新模块创建扩充本列表)
[[tool.importlinter.contracts]]
name = "L1 infra 模块互相独立"
type = "independence"
modules = [
    "kairos.modules.memory",
    # 新模块创建时加入:model_gateway / tools / knowledge / observability / eval
]

# 契约三:harness 只依赖各模块 contracts,禁止触碰 providers
# 待 providers 包创建后激活(Phase 2):
# [[tool.importlinter.contracts]]
# name = "harness 不依赖具体实现(providers)"
# type = "forbidden"
# source_modules = ["kairos.harness"]
# forbidden_modules = [
#     "kairos.modules.memory.providers",
# ]

# 待 store/kinds/retrieval 包创建后激活(Phase 2):
# [[tool.importlinter.contracts]]
# name = "记忆领域逻辑不依赖具体实现(providers)与第三方存储库"
# type = "forbidden"
# source_modules = [
#     "kairos.modules.memory.store",
#     "kairos.modules.memory.kinds",
#     "kairos.modules.memory.retrieval",
# ]
# forbidden_modules = [
#     "kairos.modules.memory.providers",
#     "lancedb",
# ]
