# harness(L2):唯一跨模块编排层。只依赖各模块 contracts 与 foundation(禁触 providers)。
[package]
name = "kairos_harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "harness"
path = "src/lib.rs"

[dependencies]
kairos_foundation = { path = "../foundation" }
kairos_model_gateway = { path = "../model_gateway" }
# M9 修复:kairos_memory 已移除(零 use memory::,retrievers.rs 用本地占位 trait)。
# 待 memory 模块 Retriever 契约落地后再接入。
kairos_tools = { path = "../tools" }
kairos_observability = { path = "../observability" }
kairos_protocol = { path = "../protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = { workspace = true }
