# model_gateway(L1):模型调用的统一入口。只依赖 foundation，模块间零依赖。
[package]
name = "kairos_model_gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "model_gateway"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
kairos_foundation = { path = "../foundation" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
